2012-05-21  Charlie Zender  <zender@uci.edu>

	* ncra -y ttl now works when first element is missing value
	nco_var_copy_tll() now sets accumulator to zero in this case
	Fixes TODO nco1051 and a regression.

	* ncra does not recognize first value of hyperslab as missing value
	This is TODO nco1051.

	* Change answer of ncra regression test #02 from 5 to 6 to reflect
	integer rounding behavior implemented on 20111020 for NCO 4.0.9.
	Fractions in [0.5) are rounded upward on conversion to integers.
	Fixes TODO nco1050.

	* Add newer regression test failures to TODO list

	* NCO 4.2.0 release procedure:
 	Changes since nco-4_1_0: ncra -y ttl, %i fmt, ncwa NaN, nc__open
	cd ~/nco;cvs tag -d nco-4_2_0;cvs tag -d nco-4_2_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.0 release"
	cvs tag -c nco-4_2_0;cvs tag -c nco-4_2_0-1

2012-05-20  Charlie Zender  <zender@uci.edu>

	* Quiet INFO and side effects from nco__open() and nco__create()

	* Prevent overwriting user-specified bfr_sz_hnt in nco_fl_open() and
	 nco_fl_out_open(). These include all uses of nco__open() and nco__create().

	* Open and then close TODO nco1047 generated by not re-setting a return code

	* Clean-up TODO lists

	* Annotate Contributors section of manual

	* Place ut_free_system() after all other ut_*() cv_*() calls
	This fixes double-free() error TODO nco1022 and nco1044 reported
	independently by Andrew Wittenburg and Peter Campbell.

2012-05-19  Charlie Zender  <zender@uci.edu>

	* Add ncattget example to documentation

2012-05-18  Charlie Zender  <zender@uci.edu>

	* Henry committed ncap2 code that fixes TODO nco7310:
	ncap2 append mode breaks when dimension already exists
	ncap2 -O -v -s 'time2=time' ~/nco/data/in.nc ~/foo.nc
	ncap2 -A -v -s 'foo=time' ~/nco/data/in.nc ~/foo.nc

2012-05-16  Charlie Zender  <zender@uci.edu>

	* ncecat no longer glues a record dimension to any auxiliary
	coordinate variables (latixy, longxy, ...) or bounds (lat_bnds,